unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/zkfedex__InternationalCommodityData__c.object-meta.xml
<CustomObject>
    <description>International Commodity Data stores international data used when creating an international FedEx shipment. It allows you to define the data once and reuse it.</description>
    <label>FedEx International Commodity Data</label>
    <nameField>
        <label>International Commodity Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FedEx International Commodity Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>