unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__CiMarksAndNumbers__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CiMarksAndNumbers__c</fullName>
    <description>An identifying mark or number used on the packaging of a shipment to help customers identify a particular shipment</description>
    <inlineHelpText>An identifying mark or number used on the packaging of a shipment to help customers identify a particular shipment</inlineHelpText>
    <label>CI Marks and Numbers</label>
    <length>15</length>
    <type>Text</type>
</CustomField>