unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__CountryOfManufacture__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__CountryOfManufacture__c</fullName>
    <label>Country of Manufacture</label>
    <length>2</length>
    <type>Text</type>
</CustomField>