unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__DocumentCommodityDescription__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__DocumentCommodityDescription__c</fullName>
    <label>Document Commodity Description</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Correspondence/No Commercial Value</fullName>
            </value>
            <value>
                <fullName>Accounting Documents</fullName>
            </value>
            <value>
                <fullName>Analysis Reports</fullName>
            </value>
            <value>
                <fullName>Applications (Completed)</fullName>
            </value>
            <value>
                <fullName>Bank Statements</fullName>
            </value>
            <value>
                <fullName>Bid Quotations</fullName>
            </value>
            <value>
                <fullName>Birth Certificates</fullName>
            </value>
            <value>
                <fullName>Bills of Sale</fullName>
            </value>
            <value>
                <fullName>Bonds</fullName>
            </value>
            <value>
                <fullName>Business Correspondence</fullName>
            </value>
            <value>
                <fullName>Checks (Completed)</fullName>
            </value>
            <value>
                <fullName>Claim Files</fullName>
            </value>
            <value>
                <fullName>Closing Statements</fullName>
            </value>
            <value>
                <fullName>Conference Reports</fullName>
            </value>
            <value>
                <fullName>Contracts</fullName>
            </value>
            <value>
                <fullName>Cost Estimates</fullName>
            </value>
            <value>
                <fullName>Court Transcripts</fullName>
            </value>
            <value>
                <fullName>Credit Applications</fullName>
            </value>
            <value>
                <fullName>Data Sheets</fullName>
            </value>
            <value>
                <fullName>Deeds</fullName>
            </value>
            <value>
                <fullName>Employment Papers</fullName>
            </value>
            <value>
                <fullName>Escrow Instructions</fullName>
            </value>
            <value>
                <fullName>Export Papers</fullName>
            </value>
            <value>
                <fullName>Financial Statements</fullName>
            </value>
            <value>
                <fullName>Immigration Papers</fullName>
            </value>
            <value>
                <fullName>Income Statements</fullName>
            </value>
            <value>
                <fullName>Insurance Documents</fullName>
            </value>
            <value>
                <fullName>Interoffice Memos</fullName>
            </value>
            <value>
                <fullName>Inventory Reports</fullName>
            </value>
            <value>
                <fullName>Invoices (Completed)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>