unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__ExportLicenseExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__ExportLicenseExpirationDate__c</fullName>
    <label>Export License Expiration Date</label>
    <type>Date</type>
</CustomField>