unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__NaftaNetCostDateRangeEnd__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaNetCostDateRangeEnd__c</fullName>
    <label>Net Cost Date Range End</label>
    <type>Date</type>
</CustomField>