unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__NaftaNetCostDateRangeStart__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__NaftaNetCostDateRangeStart__c</fullName>
    <label>Net Cost Date Range Start</label>
    <type>Date</type>
</CustomField>