unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/fields/zkfedex__QuantityUnits__c.field-meta.xml
<CustomField>
    <fullName>zkfedex__QuantityUnits__c</fullName>
    <label>Quantity Units</label>
    <length>3</length>
    <type>Text</type>
</CustomField>