unpackaged/main/default/objects/zkfedex__InternationalCommodityData__c/listViews/zkfedex__All.listView-meta.xml
<ListView>
    <fullName>zkfedex__All</fullName>
    <columns>NAME</columns>
    <columns>zkfedex__Weight__c</columns>
    <columns>zkfedex__UnitPrice__c</columns>
    <columns>zkfedex__Quantity__c</columns>
    <columns>zkfedex__Description__c</columns>
    <columns>zkfedex__DocumentCommodityDescription__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>